--- a/_config.yml
+++ b/_config.yml
@@ -112,10 +112,10 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: blog # blog_name will be displayed in your blog page
-blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
-blog_description: a simple whitespace theme for academics
-permalink: /blog/:year/:title/
+# blog_name: blog # blog_name will be displayed in your blog page
+blog_nav_title: false # your blog must have a title for it to be displayed in the nav bar
+# blog_description: a simple whitespace theme for academics
+# permalink: /blog/:year/:title/
 
 # Pagination
 pagination:
@@ -181,7 +181,6 @@ keep_files:
 
 # Plug-ins
 plugins:
-    - jekyll-feed
     - jekyll-sitemap
   # - jekyll-archives
   # - jekyll-diagrams
