--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,118 @@
-- title: General Information
+- title: Allgemeines
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+    - name: Name
+      value: Jonas Lauer
+    - name: Sprachen
+      value: Deutsch, Französich, Englisch
+    - name: Kontakt
+      value: jonas.lauer93@gmail.com
 
-- title: Education
+- title: Berufserfahrung
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Ingenieursdienstleister
+      institution: Freiberufliche Nebentätigkeit
+      year: Juni 2020
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - SPS-Programmierung (Motorsynchronisation mit Siemens S7)
+        - Sensordatenerfassung (Umweltdatenerfassung mit Cloudanbindung)
+        - WiFi basiertes PickByLight (Microcontroller + Electron Tool)
+    - title: Softwareentwickler
+      institution: Bizerba SE & Co. KG, Balingen
+      year: Februar 2020
       description:
-        - Description 1.
-        - Description 2.
+        - Ablaufsteuerung einer Verpackungsmaschine (Embedded, CanOpen)
+        - Umsetzung automatisierter Hardwaretests
+        - Software-Integration neuer Komponenten (bspw. Deltaroboter)
+        - GUI Entwicklung mit Webtechnologien
+        - Analysetools
+    - title: Applikationsingenieur
+      institution: Automation of Things Europe GmbH, Albstadt
+      year: März 2018 <br>&nbsp;&nbsp;&nbsp;&nbsp;- Dezember 2019
+      description:
+        - Applikationserstellung und Kundenbetreuung
+        - Weiterentwicklung des Automatisierungstools (Embedded Entwicklung in C++)
+    - title: Hilfswissenschaftler in Teilzeit
+      institution: TU Darmstadt
+      year: Mai 2016 <br>&nbsp;&nbsp;&nbsp;&nbsp;- September 2017
+      description:
+        - "Forschungsgebiete: Effiziente Produktion, Industrie 4.0"
+        - "Aufgaben: SPS-Programmierung, HMI Erstellung"
 
-- title: Experience
+
+- title: Schulische Ausbildung und Praktika
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: M.Sc. Mechanical and Process Engineering (allg. Maschinenbau)
+      institution: TU Darmstadt
+      year: Oktober 2015<br>&nbsp;&nbsp;&nbsp;&nbsp;- Februar 2018
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Master-Thesis im Bereich maschinelles Lernen und Condition Monitoring
+    - title: Praktikant R&D
+      institution: Rotarex SA, Lintgen Luxemburg
+      year: Oktober 2014 <br>&nbsp;&nbsp;&nbsp;&nbsp;- September 2015
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Entwicklung eines Füllstandssensors (mathematische Beschreibung, Konstruktion, Testdurchführung)
+        - Durchführung von Messreihen bei Zulieferern
+    - title: B.Sc. Bachelor Académique en Sciences et Ingéniérie (Maschinenbau)
+      institution: Universität Luxemburg
+      year: Oktober 2014 <br>&nbsp;&nbsp;&nbsp;&nbsp;- September 2015
       description:
+        - "Bachelor-Thesis: Analyse der Druckeingenspannungen zylindrischer Aluminiumgeometrien nach der Autofrettage"
+    - title: Allgemeine Hochschulreife
+      institution: Gymnasium Johanneum, Homburg
+      year: Oktober 2014 <br>&nbsp;&nbsp;&nbsp;&nbsp;- September 2015
+      description:
+        - Bilinguale Ausbildung mit Erwerb des Baccalauréat (frz. Abitur)
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
-
-- title: Academic Interests
+- title: Kenntnisse und Schulungen
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Schulungen
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - ISTQB Certified Tester Foundation Level (CTFL)
+        - Scrum Master
+    - title: Textverarbeitung und Office
+      items: 
+        - MS Office
+        - LaTeX
+        - Markdown
+    - title: Kommunikations/Feldbus- Protokolle
       items:
-        - Description 1.
-        - Description 2.
+        - OPC-UA, Modbus (RTU/TCP), MQTT
+        - CanOpen
+        - SPI, I2C
+    - title: Programmiersprachen und Tools
+      items:
+        - C++, Java, Webtechnologien (HTML/CSS, Javascript), Python, Lua
+        - GIT
+        - Docker, AzureDevOps (WorkItems,Codeverwaltung,ContinousIntegration)
+        - Datenbanken (InfluxDB, PostgreSQL, IndexedDB)
+    - title: SPS Programmierung
+      items:
+        - B&R, Beckhoff, PLCnext, PiXtend, Rexroth, Siemens
+        - Programmierung in ST
+    - title: Simulation
+      items:
+        - MatLab, MatLab Simulink, SciLab, LabView
+    - title: CAD
+      items:
+        - Autodesk Inventor, Autodesk Fusion, CATIA V5, FreeCAD
 
-- title: Other Interests
-  type: list
+- title: Freizeit
+  type: nested_list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - title: Ehrenamt
+      items: 
+        - Volleyballtrainer
+        - Passmanagement + Ausschussmitglied
+    - title: Sport
+      items:
+        - Volleyball
+        - Crossfit
+    - title: Technik
+      items:
+        - 3D-Druck
+        - Handwerkliche Tätigkeiten
+        - Programmieren
