--- a/_config.yml
+++ b/_config.yml
@@ -306,7 +306,7 @@ enable_navbar_social:       true   # enables displaying social links in the
                                    # navbar on the about page
 enable_project_categories:  true   # enables categorization of projects into
                                    # multiple categories
-enable_medium_zoom:         false  # enables image zoom feature (as on medium.com)
+enable_medium_zoom:         true   # enables image zoom feature (as on medium.com)
 
 
 # -----------------------------------------------------------------------------
